<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background">

    <ImageView
        android:id="@+id/iv_logo"
        android:layout_width="140dp"
        android:layout_height="140dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="30dp"
        android:src="@drawable/logo"/>

    <TextView
        android:id="@+id/tv_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/iv_logo"
        android:layout_marginTop="10dp"
        android:textSize="40sp"
        android:fontFamily="@font/burchelli"
        android:textColor="@color/text"
        android:text="@string/welcome"/>

    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_title"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:layout_marginHorizontal="16dp"
        android:textSize="20sp"
        android:fontFamily="@font/burchelli"
        android:textColor="@color/white"
        android:text="@string/text"/>

    <TextView
        android:id="@+id/tv_next"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="20dp"
        android:gravity="center"
        android:layout_marginHorizontal="16dp"
        android:textSize="25sp"
        android:fontFamily="@font/burchelli"
        android:textColor="@color/title"
        android:text="@string/get_started"/>

</androidx.constraintlayout.widget.ConstraintLayout>