<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".AddPlayersActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">

        <TextView
            android:id="@+id/tv_players"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/enter_player_names"
            android:fontFamily="@font/burchelli"
            android:textColor="@color/white"
            android:textSize="30sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

        <LinearLayout
            android:id="@+id/ll_player_one"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="20dp"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:background="@color/dark_blue"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_players">
            
            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:src="@drawable/cross"
                android:layout_marginStart="20dp"/>

            <EditText
                android:id="@+id/et_player_one"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="text"
                android:maxLines="1"
                android:layout_marginHorizontal="20dp"
                android:background="@color/dark_blue"
                android:textColor="@color/white"
                android:textColorHint="@color/light_gray"
                android:hint="@string/player_one"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_player_two"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="20dp"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:background="@color/dark_blue"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ll_player_one">

            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:src="@drawable/zero"
                android:layout_marginStart="20dp"/>

            <EditText
                android:id="@+id/et_player_two"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="text"
                android:maxLines="1"
                android:layout_marginHorizontal="20dp"
                android:background="@color/dark_blue"
                android:textColor="@color/white"
                android:textColorHint="@color/light_gray"
                android:hint="@string/player_two"/>

        </LinearLayout>
        
        <TextView
            android:id="@+id/tv_start"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:background="@drawable/button"
            android:textColor="@color/white"
            android:textSize="25sp"
            android:text="@string/start_game"
            android:gravity="center"
            android:fontFamily="@font/burchelli"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="40dp"
            app:layout_constraintTop_toBottomOf="@+id/ll_player_two"/>


    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>